# ShadowSOL

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
ZK/circuits/: merkleTree.circom  withdraw.circom
programs/shadowsol/: Cargo.toml
programs/shadowsol/src/: lib.rs  merkle.rs  verifier.rs  verifying_key.rs
programs/shadowsol/src/groth16_solana/: decompression.rs  groth16.rs  mod.rs
tests/: shadowsol.ts
